<resources>
    <string name="app_name">WeatherApp</string>

    <string name="wind">wind</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="icon_weather">icon weather</string>
    <string name="nothing_to_show">Nothing to show</string>

    <string name="access">Access to locaton</string>

    <string name="API_KEY_GMS">AIzaSyB3d_JQR7emku_nMTwLkLpL2nfSOhBM4tw</string>

</resources>
